--- a/client-src/src/styles.sass
+++ b/client-src/src/styles.sass
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap')
+
+@import "./assets/scss/clean-blog"
