Added: Template re-rendering

--- a/client-src/src/app/about/about.component.html
+++ b/client-src/src/app/about/about.component.html
@@ -1,3 +1,8 @@
+<app-header
+  heading="About"
+  subheading="All about this blog"
+  headerImage="url(assets/img/about-bg.jpg)"
+></app-header>
 <!-- Main Content -->
 <div class="container">
   <div class="row">
