--- a/client-src/src/app/app.component.html
+++ b/client-src/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-navbar></app-navbar>
-<app-header></app-header>
-
 <router-outlet></router-outlet>
-
-<!--<app-homepage></app-homepage>-->
 <hr>
-<app-footer></app-footer>
+<app-footer company="The Creative Process" ></app-footer>
