--- a/client-src/src/app/contact/contact.component.html
+++ b/client-src/src/app/contact/contact.component.html
@@ -1,4 +1,10 @@
 <!-- Main Content -->
+<app-header
+  heading="Contact"
+  subheading="For any questions fill the form"
+  headerImage="url(assets/img/contact-bg.jpg)"
+>
+</app-header>
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
