--- a/client-src/src/app/header/header.component.html
+++ b/client-src/src/app/header/header.component.html
@@ -1,12 +1,14 @@
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('./assets/img/home-bg.jpg')">
+<header
+  class="masthead"
+  [ngStyle]= "{ 'background-image': headerImage }" >
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="site-heading">
-          <h1>Clean Blog</h1>
-          <span class="subheading">A Blog Theme by Start Bootstrap</span>
+        <div [ngClass]="isPost === 'post' ? 'post-heading' : 'site-heading'">
+          <h1>{{ heading }}</h1>
+          <span class="subheading">{{ subheading }}</span>
         </div>
       </div>
     </div>
