--- a/client-src/src/app/post/post.component.html
+++ b/client-src/src/app/post/post.component.html
@@ -1,4 +1,10 @@
 <!-- Post Content -->
+<app-header
+  heading="Post"
+  subheading="Some post story"
+  headerImage="url(assets/img/post-bg.jpg)"
+  isPost='post'
+></app-header>
 <article>
   <div class="container">
     <div class="row">
