--- a/client-src/src/app/navbar/navbar.component.html
+++ b/client-src/src/app/navbar/navbar.component.html
@@ -2,11 +2,15 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Start Bootstrap</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      (click)="toggleMenu()"
+      class="navbar-toggler navbar-toggler-right"
+      type="button"
+      aria-label="Toggle navigation">
       Menu
       <i class="fas fa-bars"></i>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div [ngClass]=" isOpen ? 'collapse' : ''" class="navbar-collapse nav-timing" id="navbarResponsive" >
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Home</a>
