--- a/client-src/src/app/navbar/navbar.component.html
+++ b/client-src/src/app/navbar/navbar.component.html
@@ -24,6 +24,12 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="contact">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="register">Register</a>
+        </li>
       </ul>
     </div>
   </div>
