Added: sample Http Service

--- a/client-src/src/app/login/login.component.html
+++ b/client-src/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <app-header
   heading="Login"
   subheading="Login into the site to check dashboard"
+  headerImage="url(assets/img/login-bg.jpg)"
 ></app-header>
 <div class="container">
   <div class="row">
