--- a/client-src/src/app/register/register.component.html
+++ b/client-src/src/app/register/register.component.html
@@ -1,6 +1,7 @@
 <app-header
   heading="Register"
   subheading="Register into the site to check dashboard"
+  headerImage="url(assets/img/register-bg.jpg)"
 ></app-header>
 <div class="container">
   <div class="row">
